# Agent_Limit

./: .gitignore  AGENTS.md  README.md  github-copilot plan.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: cleanup-build-artifacts.ps1  export-root-exe.ps1
src/: App.tsx  WidgetApp.tsx  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: environment.rs  error.rs  lib.rs  locale.rs  main.rs  models.rs  provider_settings.rs
src-tauri/src/providers/: codex.rs  custom_provider.rs  github_copilot.rs  mod.rs  openrouter.rs
src-tauri/src/providers/api_platform/: mod.rs
src/components/: ProviderCard.tsx
src/lib/: api.ts
src/types/: provider.ts
