[package]
name = "agent-limit"
version = "0.1.0"
description = "Desktop quota viewer for Codex and other agent providers"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "agent_limit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
thiserror = "2"
toml = "0.8"
walkdir = "2"

